tests/ui/imports/ambiguous-10.stderr
error: `Token` is ambiguous
  --> $DIR/ambiguous-10.rs:15:9
   |
LL | fn c(_: Token) {}
   |         ^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `Token` could refer to the enum imported here
  --> $DIR/ambiguous-10.rs:13:5
   |
LL | use crate::a::*;
   |     ^^^^^^^^^^^
   = help: consider adding an explicit import of `Token` to disambiguate
note: `Token` could also refer to the enum imported here
  --> $DIR/ambiguous-10.rs:14:5
   |
LL | use crate::b::*;
   |     ^^^^^^^^^^^
   = help: consider adding an explicit import of `Token` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: `Token` is ambiguous
  --> $DIR/ambiguous-10.rs:15:9
   |
LL | fn c(_: Token) {}
   |         ^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `Token` could refer to the enum imported here
  --> $DIR/ambiguous-10.rs:13:5
   |
LL | use crate::a::*;
   |     ^^^^^^^^^^^
   = help: consider adding an explicit import of `Token` to disambiguate
note: `Token` could also refer to the enum imported here
  --> $DIR/ambiguous-10.rs:14:5
   |
LL | use crate::b::*;
   |     ^^^^^^^^^^^
   = help: consider adding an explicit import of `Token` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

